Fix left alignment of addresses

--- a/public/stylesheets/sass/base.sass
+++ b/public/stylesheets/sass/base.sass
@@ -453,6 +453,11 @@ a:hover
         p
           padding: 0
           margin: 8px 16px
+        
+        div.address
+          p
+            padding: 0 0 0 212px
+            margin: 8px 16px 8px 0
 
         input, textarea
           font-family: $font_copy
